kubernetes-manifest/go-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-go
  namespace: sre-test
spec:
  selector:
    app: sre-go
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
  type: ClusterIP
