kubernetes-manifest/node-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sre-node
  namespace: sre-test
spec:
  selector:
    app: sre-node
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
  type: ClusterIP
